# tsls

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: check.yaml  latest.yaml
crates/completion/: Cargo.toml
crates/database/: Cargo.toml
crates/database/src/: db.rs  lib.rs  state.rs
crates/helper/: Cargo.toml
crates/helper/src/: lib.rs
crates/helper/tests/: integration_test.rs
crates/queries/: Cargo.toml
crates/queries/src/: errors.rs  highlight.rs  indents.rs  lib.rs  locals.rs  utils.rs
crates/server/: Cargo.toml
crates/server/src/: caps.rs  lib.rs  macros.rs  main_loop.rs
crates/server/src/global_state/: cache.rs  docuemnt.rs  mod.rs  parsed.rs  propertie.rs  state.rs
crates/server/src/handler/: call_hierarchy.rs  completion.rs  did_change.rs  did_close.rs  did_open.rs  did_save.rs  document_symbol.rs  format.rs  goto_definition.rs  mod.rs  publish_diagnostics.rs  references.rs  rename.rs
crates/tsls/: Cargo.toml
crates/tsls/src/: config.rs  main.rs
crates/tsls/src/cli/: mod.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
docs/: roadmap.norg
editor/vscode/client/: .gitignore  package.json
editor/vscode/client/src/: extension.ts
queries/c/: children.scm  locals.scm
queries/hare/: locals.scm
