[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fst = "0.4.7"
lsp-types = "0.93.1"
salsa = "0.17.0-pre.2"
tree-sitter = "0.20.9"

types = {path = "../types", version = "0.1.0"}
queries = { path = "../queries", version = "0.1.0" }
parking_lot = "0.12.1"
