[package]
name = "helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20.0"
lsp-types = "0.92.0"
log = "0.4.14"

tree-sitter-c = {version = "0.20.1", optional = false}
tree-sitter-cpp = { version = "0.20.0", optional = false}
tree-sitter-python = { version = "0.19.1", optional = false}
tree-sitter-go = { version = "0.19.1", optional = false}
tree-sitter-javascript = { version = "0.20.0", optional = false}
tree-sitter-rust = { version = "0.20.1", optional = false}
tree-sitter-typescript = { version = "0.20.0", optional = false}
tree-sitter-kotlin = { version = "0.2.11", optional = false}
tree-sitter-cuda = { version = "0.1.0", optional = false}
tree-sitter-glsl = { version = "0.1.2", optional = false}
tree-sitter-hare = {path = "../../parsers/tree-sitter-hare", version = "0.0.1"}
