[package]
name = "queries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20.1"
log = "0.4.0"
lsp-types = "0.93.0"
dirs = "4.0.0"
rust-embed = {version = "6.3.0", features = ["debug-embed"]}

tree-sitter-query = {path = "../../parsers/tree-sitter-query", version = "0.0.1"}
helper = {path = "../helper", version = "0.1.0"}
