[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20.0"
lsp-types = "0.94.0"
log = "0.4.14"
jsonrpc-core = "18.0"
lsp-server = "0.6.0"
serde_json = "1.0.34"
serde = { version = "1.0.83", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3.9"
libloading = "0.7.2"

queries = { path = "../queries", version = "0.1.0" }
helper = { path = "../helper", version = "0.1.0" }

