[package]
name = "tsls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
log = "0.4.0"
flexi_logger = { version = "0.23.3", features = ["use_chrono_for_offset"] }

queries = {path = "../queries", version = "0.1.0"}
server = {path = "../server", version = "0.1.0"}

